<resources>
    <string name="app_name">Pda2017</string>

    <!--五个主菜单-->
    <string name="enter">入库业务</string>
    <string name="outter">出库业务</string>
    <string name="stock">库存业务</string>
    <string name="query">查询业务</string>
    <string name="message">消息</string>

    <!-- 入库业务 -->
    <string name="enter_purchase">采购收货入库</string>
    <string name="enter_sale_return">销售退货入库</string>
    <string name="enter_allot">调拨入库</string>


    <string name="wms">店商互联WMS系统</string>
    <string name="header_back">返回</string>

    <string name="warehouse">仓库</string>
    <string name="userName">用户名</string>
    <string name="user_name_edit">请输入用户名</string>
    <string name="password_edit">请输入密码</string>
    <string name="password_remmber">记住登录密码</string>
    <string name="password">密码</string>
    <string name="button_login">登录</string>
    <string name="version">版本:</string>

</resources>
