<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/wathet"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/mainActivity_tab_enter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mainActivity_tab_enter_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/mainActivity_tab_enter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainActivity_tab_outter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mainActivity_tab_outter_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/mainActivity_tab_outter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outter"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainActivity_tab_stock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mainActivity_tab_stock_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/mainActivity_tab_stock_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainActivity_tab_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mainActivity_tab_query_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/mainActivity_tab_query_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/query"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainActivity_tab_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mainActivity_tab_message_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/mainActivity_tab_message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message"/>
            </LinearLayout>
        </LinearLayout>

        <!--显示消息未读条数的自定义view-->
        <ImageView
            android:id="@+id/mainActivity_badgeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"/>
    </RelativeLayout>
</LinearLayout>