<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" >

    <!-- 入库业务 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/fragmentEnterWarehouseMain_purchaseEnterBill_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="#00CDCD" >

            <ImageView
                android:id="@+id/fragmentEnterWarehouseMain_purchaseEnterBill_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_launcher"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/fragmentEnterWarehouseMain_purchaseEnterBill_image"
                android:text="@string/enter_purchase" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragmentEnterWarehouseMain_saleReturnBill_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="#00CDCD" >

            <ImageView
                android:id="@+id/fragmentEnterWarehouseMain_saleReturnBill_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_launcher"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/fragmentEnterWarehouseMain_saleReturnBill_image"
                android:text="@string/enter_sale_return" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/fragmentEnterWarehouseMain_allot_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="#00CDCD" >

            <ImageView
                android:id="@+id/fragmentEnterWarehouseMain_allot_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_launcher"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/fragmentEnterWarehouseMain_allot_image"
                android:text="@string/enter_allot" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>